# news_reader

./: .gitignore  CMakeLists.txt  Consumer Price Index Summary - 2022 M08 Results.htm  config.json  install.bash  main.cpp  news-watcher.service  testwatch-activator.service  testwatch.service  testwatch_activator.py
Abstract/: EndpointListener.hpp
DeployingScripts/: cmake_install.bash
Listeners/: PerformanceEndpointListener.hpp
Listeners/Cpi/: CpiApiEndpointListener.hpp  CpiHtmEndpointListener.hpp  CpiPdfEndpointListener.hpp  CpiRssEndpointListener.hpp
